Created a EntryDto for a plp Code for using many contenttypes and locals in the homecontroller

--- a/Views/Home/Export.cshtml
+++ b/Views/Home/Export.cshtml
@@ -3,17 +3,17 @@
 
 @using (Html.BeginForm("Export", "Export", FormMethod.Post))
 {
-    @Html.LabelFor(model => model.EnvironmentName)
-    @Html.TextBoxFor(model => model.EnvironmentName)
+    @Html.LabelFor(model => model.Environment)
+    @Html.TextBoxFor(model => model.Environment)
 
     @Html.LabelFor(model => model.SpaceId)
     @Html.TextBoxFor(model => model.SpaceId)
 
-    @Html.LabelFor(model => model.Locales)
-    @Html.TextBoxFor(model => model.Locales)
+    @Html.LabelFor(model => model.Locale)
+    @Html.TextBoxFor(model => model.Locale)
 
-    @Html.LabelFor(model => model.ContentTypesId)
-    @Html.TextBoxFor(model => model.ContentTypesId)
+    @Html.LabelFor(model => model.ContentType)
+    @Html.TextBoxFor(model => model.ContentType)
 
     @Html.LabelFor(model => model.AccessToken)
     @Html.TextBoxFor(model => model.AccessToken)
