Able to export many Contenttypes

--- a/Views/Export/index.cshtml
+++ b/Views/Export/index.cshtml
@@ -11,8 +11,8 @@
     @Html.LabelFor(model => model.Locale)
     @Html.TextBoxFor(model => model.Locale)
 
-    @Html.LabelFor(model => model.ContentType)
-    @Html.TextBoxFor(model => model.ContentType)
+    @Html.LabelFor(model => model.ContentTypes)
+    @Html.TextBoxFor(model => model.ContentTypes)
 
     @Html.LabelFor(model => model.AccessToken)
     @Html.TextBoxFor(model => model.AccessToken)
