Possible to export several locales at the same time

--- a/Views/Export/index.cshtml
+++ b/Views/Export/index.cshtml
@@ -8,8 +8,8 @@
     @Html.LabelFor(model => model.SpaceId)
     @Html.TextBoxFor(model => model.SpaceId)
 
-    @Html.LabelFor(model => model.Locale)
-    @Html.TextBoxFor(model => model.Locale)
+    @Html.LabelFor(model => model.Locales)
+    @Html.TextBoxFor(model => model.Locales)
 
     @Html.LabelFor(model => model.ContentTypes)
     @Html.TextBoxFor(model => model.ContentTypes)
