--- a/Views/Export/index.cshtml
+++ b/Views/Export/index.cshtml
@@ -13,8 +13,8 @@
         background-color:darkorange;
     }
 
-    #loading {
-        
+    label {
+        font-weight: bold;
     }
 
     #excelDownloadLink {
@@ -52,15 +52,19 @@
 @using (Html.BeginForm("Index", "Export", FormMethod.Post, new { id = "exportForm" } ))
 {
     @Html.LabelFor(model => model.Environment)
+    <small>ex: stage</small>
     @Html.TextBoxFor(model => model.Environment)
 
     @Html.LabelFor(model => model.SpaceId)
+    <small>ex: spz4r8efhveb</small>
     @Html.TextBoxFor(model => model.SpaceId)
 
     @Html.LabelFor(model => model.Locales)
+    <small>ex: sv-SE, pl-PL</small>
     @Html.TextBoxFor(model => model.Locales)
 
     @Html.LabelFor(model => model.ContentTypes)
+    <small>ex: productListingPage, ad, brand </small>
     @Html.TextBoxFor(model => model.ContentTypes)
 
     @Html.LabelFor(model => model.AccessToken)
@@ -73,7 +77,7 @@
 
 
 <div id="downloadLink" style="display:none;">
-    <a id="excelDownloadLink" href="#">Kopiera denna länkadress och kopiera in i ny flik för att ladda ner excelfilen</a>
+    <a id="excelDownloadLink" href="#">Copy this link address and put in a new tab to download the excel file</a>
 </div>
 
 @section scripts {
@@ -82,6 +86,19 @@
         $(function () {
             $('#exportForm').submit(function (event) {
                 event.preventDefault(); // Hindra standardformuläret från att skickas
+
+                var isEmpty = false;
+                $('input[type="text"]').each(function () {
+                    if ($(this).val() === '') {
+                        isEmpty = true;
+                        return false; // Break out of the loop
+                    }
+                });
+
+                if (isEmpty) {
+                    alert('All fields must be filled out.');
+                    return false; // Prevent form submission
+                }
 
                 // Visa "Loading..." texten
                 $('#loading').show();
